--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -1,5 +1,16 @@
 @import mixins
 
+// Create a distinctive style, no default Boostrap – that looks bland
+
+label, input, button, select, textarea, .btn
+	font-size: 12px
+
+.btn-mini
+	font-size: 11pxa
+
+.btn
+	padding: 3px 10px
+
 .btn-primary
 	@include gradient(#ffac00,#ff9c00)
 	border: 1px solid #d67f00
