--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -1,9 +1,17 @@
-
+@import mixins
 .eze
+
+	a
+		color: #000
+
+		&:hover
+			text-decoration: none
 
 
 	// Custom Interface elements, besides Bootstrappin
 
+
+	// Custom generic list
 	.eze-items
 		list-style-type: none
 		margin: 0 0 10px 0
@@ -13,7 +21,6 @@
 			width: 100%
 			border-radius: 4px
 			background: #ccc
-			height: 26px
 
 			.wrap
 				background: #fff
@@ -21,30 +28,92 @@
 				border-radius: 4px
 				padding: 0 4px
 				position: relative
+				height: 26px
+				line-height: 26px
 				
 				p
 					margin: 0 30px 0 0
-					height: 26px
-					line-height: 26px
-					overflow: hidden
 					font-size: 12px
+					height: 26px
+					overflow: hidden
 
-					small
-						font-size: 11px
+				small
+					font-size: 11px
 
-					i
-						margin: 0 3px 0 0
+				i
+					margin: 0 3px 0 0
 
-					img
-						margin: -1px 3px 0 0
+				img
+					margin: -1px 3px 0 0
 
 				.btn
 					position: absolute
-					top: 3px
-					right: 4px
+					top: 50%
+					margin-top: -11px
+					right: 3px
 
 					&.edit-btn
-						right: 28px
+						right: 34px
 
-	.chzn-container
+
+
+	// List of content classes
+	.eze-content-types
+		list-style: none
+		margin: 0
+
+		li
+			cursor: pointer
+			display: block
+			float: left
+			margin: 0 10px 10px 0
+			width: 160px
+			border: 1px solid #d9d9d9
+			@include gradient(#f8f8f8,#eeeeee)
+			height: 24px
+			font: normal 12px/26px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+			border-radius: 4px
+			padding: 0 15px 0 5px
+
+			img
+				margin: -4px 4px 0 0
+
+			&:hover
+				background: #fff
+
+
+
+
+	.chzn-container // The same as the standard select
 		margin-bottom: 9px
+
+
+
+
+	.eze-comments // With avatars and the works
+		list-style: none
+		margin: 0 0 10px 0
+
+		li
+			border-top: 1px solid #fff
+			border-bottom: 1px solid #dcdcdc
+			padding: 6px 15px
+			margin: 0 -15px
+
+			&:first-child
+				border-top: 0
+
+			&:hover
+				background: #fff
+
+			img
+				height: 34px
+				width: 34px
+				border-radius: 34px
+				float: left
+			p
+				margin: 0 0 0 40px
+				font: normal 12px/18px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+
+				.date
+					font-size: 11px
