--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -22,3 +22,134 @@
 			box-shadow: 3px 0 0 0 rgba(0,0,0,0.3)
 			-webkit-animation: fade-in 0s ease-in 1
 			min-height: 100%
+
+
+
+	// Small modal
+
+	.eze-smallmodal
+		position: absolute
+		top: 50px
+		left: 87px
+		background: #f5f5f5
+		border-radius: 4px
+		box-shadow: 0 0 10px 2px rgba(0,0,0,0.5)
+		max-height: 600px
+		width: 350px
+		z-index: 60000
+		padding: 15px
+
+		.arrow
+			height: 16px
+			width: 16px
+			position: absolute
+			left: -16px
+			top: 50%
+			bottom: 50%
+			margin-top: -8px
+			background: #000
+
+		h1
+			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			margin: 0 0 10px 0
+
+			i
+				margin: 0 5px 0 0
+
+		h2
+			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			margin: 0 0 10px 0
+
+
+
+
+
+
+
+
+	// Custom styles for different modals
+
+	.eze-activity-modal
+
+		.btn-group
+			margin: 0 0 10px 0
+
+		.write-comment
+			margin: 0 0 10px 0
+
+			input
+				width: 270px
+
+
+	.eze-publish-modal
+		label.checkbox
+			margin: 0 0 10px 0
+
+		li i
+			float: right
+
+
+	.eze-add-content-modal
+		width: 580px
+
+
+	.eze-layout-modal
+		width: 580px
+
+		.active-layout
+			border: 3px solid orange
+
+		h2
+			margin: 20px 0 10px 0
+
+		.nav-pills
+			margin: 0
+
+			li
+
+				a
+					background: #fff
+					margin-right: 10px
+
+				&.active a
+					background: #000
+
+		.tab-content
+			overflow: visible
+			padding: 5px 0 0 0
+
+			ul li
+
+				.wrap
+					height: 36px
+					line-height: 36px
+
+					p
+						width: 320px
+						height: 36px
+						float: left
+						margin: 0
+						text-overflow: ellipsis
+						white-space: nowrap
+
+				.name
+					width: 150px
+					margin: 0 10px 0 0
+
+				select, .chzn-container
+					width: 140px
+					float: right
+					margin: 5px 80px 0 0
+
+			.add-new
+				margin: 0
+
+				select, .chzn-container
+					margin: 0
+				.btn
+					margin-top: -4px
+
+
+
+
+
