--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -25,7 +25,7 @@
                 width: 20px
 
     
-    table
+    .eze-datatable
         border: 1px solid #ccc
         text-align: left
         width: 100%
@@ -108,4 +108,4 @@
                 background: rgba(0,0,0,0.02)
                 cursor: default
 
-                
+            
