--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -8,6 +8,7 @@
 		margin: 0
 		list-style-type: none
 		position: fixed
+		z-index: 100
 		right: 44px
 		left: 64px
 		min-width: 650px
@@ -35,6 +36,7 @@
 				font: normal 16px/46px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 				background: #ff8500
 				border-bottom: 0
+				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4)
 
 				img
 					margin-top: -2px
@@ -42,7 +44,7 @@
 			&.move-in
 				-moz-animation: stack-header-move-in 0.7s ease 1 normal
 				-webkit-animation: stack-header-move-in 0.7s ease 1 normal
-				-webkit-animation-delay: 2s
+				//-webkit-animation-delay: 2s
 
 			&.move-out
 				-moz-animation: stack-header-move-out 0.7s ease 1 normal
@@ -61,9 +63,17 @@
 		min-width: 650px
 		right: 44px
 		max-width: 1100px
+		padding: 15px
+		overflow: auto
+		-moz-box-sizing: border-box
+		box-sizing: border-box
 		-moz-animation: fade-in 0.5s ease 1 normal
 		-webkit-animation: fade-in 0.9s ease 1 normal
-		-webkit-animation-delay: 2s
+		//-webkit-animation-delay: 2s
+
+		&.dark
+			background: #222
+			color: #fff
 
 		&.move-out
 			-moz-animation: stack-content-move-out 0.5s ease 1 normal
